--- a/service-details-3.html
+++ b/service-details-3.html
@@ -2,34 +2,34 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>IT Solutions</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+    <title>IT Solutions</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <!-- Favicons -->
+    <link href="assets/img/favicon.png" rel="icon">
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-          href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Roboto:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-          rel="stylesheet">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+            href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Roboto:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+            rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <!-- Vendor CSS Files -->
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+    <!-- Template Main CSS File -->
+    <link href="assets/css/main.css" rel="stylesheet">
 
 
 </head>
@@ -38,152 +38,167 @@
 
 <!-- ======= Header ======= -->
 <header id="header" class="header d-flex align-items-center">
-  <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
+    <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-    <a href="index.html" class="logo d-flex align-items-center">
-      <!-- Uncomment the line below if you also wish to use an image logo -->
-      <!-- <img src="assets/img/logo.png" alt=""> -->
-      <h1>IT Solutions<span>.</span></h1>
-    </a>
+        <a href="index.html" class="logo d-flex align-items-center">
+            <!-- Uncomment the line below if you also wish to use an image logo -->
+            <!-- <img src="assets/img/logo.png" alt=""> -->
+            <h1>IT Solutions<span>.</span></h1>
+        </a>
 
-    <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
-    <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
-    <nav id="navbar" class="navbar">
-      <ul>
-        <li><a href="index.html">Trang chủ</a></li>
-        <li><a href="about.html">Về Chúng tôi</a></li>
-        <li><a href="services.html">Dịch vụ</a></li>
-        <li><a href="projects.html">Dự Án</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="contact.html">Liên lạc</a></li>
-      </ul>
-    </nav><!-- .navbar -->
+        <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
+        <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
+        <nav id="navbar" class="navbar">
+            <ul>
+                <li><a href="index.html">Trang chủ</a></li>
+                <li><a href="about.html">Về Chúng tôi</a></li>
+                <li><a href="services.html">Dịch vụ</a></li>
+                <li><a href="projects.html">Dự Án</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contact.html">Liên lạc</a></li>
+            </ul>
+        </nav><!-- .navbar -->
 
-  </div>
+    </div>
 </header><!-- End Header -->
 
 <main id="main">
 
-  <!-- ======= Breadcrumbs ======= -->
-  <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/breadcrumbs-bg.jpg');">
-    <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
+    <!-- ======= Breadcrumbs ======= -->
+    <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/breadcrumbs-bg.jpg');">
+        <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-      <h2>Dịch Vụ Bảo Mật Hệ Thống</h2>
-      <ol>
-        <li><a href="index.html">Trang chủ</a></li>
-        <li>Dịch vụ</li>
-      </ol>
+            <h2>Dịch Vụ Bảo Mật Hệ Thống</h2>
+            <ol>
+                <li><a href="index.html">Trang chủ</a></li>
+                <li>Dịch vụ</li>
+            </ol>
 
-    </div>
-  </div><!-- End Breadcrumbs -->
-
-  <!-- ======= Service Details Section ======= -->
-  <section id="service-details" class="service-details">
-    <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-      <div class="row gy-4">
-
-        <div class="col-lg-4">
-          <div class="services-list">
-            <a href="#" class="active">Đánh giá hệ thống</a>
-            <a href="#">Kiểm thử bảo mật</a>
-            <a href="#">Quản lý rủi ro</a>
-            <a href="#">Phục hồi sự cố</a>
-            <a href="#">Thiết kế giải pháp bảo mật</a>
-          </div>
-
-          <h4>Giải pháp bảo mật hệ thống toàn diện</h4>
-          <p>Chúng tôi cung cấp dịch vụ bảo mật chuyên sâu nhằm bảo vệ hệ thống của bạn khỏi các mối đe dọa tiềm ẩn, đảm bảo an toàn dữ liệu và duy trì sự hoạt động liên tục của hệ thống doanh nghiệp.</p>
         </div>
+    </div><!-- End Breadcrumbs -->
 
-        <div class="col-lg-8">
-          <img src="assets/img/service/service-3-1024x648.jpg" alt="" class="img-fluid services-img">
-          <h3>Dịch vụ bảo mật hệ thống tiên tiến, đảm bảo an toàn cho mọi môi trường CNTT</h3>
-          <p>
-            Chúng tôi hỗ trợ kiểm tra, đánh giá và nâng cấp hệ thống bảo mật cho doanh nghiệp nhằm ngăn chặn các lỗ hổng bảo mật, giảm thiểu rủi ro và bảo vệ dữ liệu khỏi các cuộc tấn công mạng. Đội ngũ chuyên gia của chúng tôi sẽ xây dựng chiến lược bảo mật phù hợp, đảm bảo an ninh hệ thống.
-          </p>
-          <ul>
-            <li><i class="bi bi-check-circle"></i> <span>Đánh giá và kiểm thử lỗ hổng bảo mật toàn diện.</span></li>
-            <li><i class="bi bi-check-circle"></i> <span>Thiết kế và triển khai các giải pháp bảo mật hiện đại.</span></li>
-            <li><i class="bi bi-check-circle"></i> <span>Tư vấn và quản lý rủi ro bảo mật cho hệ thống CNTT.</span></li>
-          </ul>
-          <p>
-            Với chuyên môn sâu rộng, chúng tôi giúp doanh nghiệp xây dựng và duy trì một hệ thống bảo mật mạnh mẽ, phát hiện và ngăn chặn kịp thời các mối đe dọa. Hỗ trợ phục hồi sau sự cố và đảm bảo hệ thống luôn hoạt động an toàn, tin cậy.
-          </p>
-          <p>
-            Chúng tôi cung cấp các giải pháp bảo mật toàn diện, từ kiểm thử bảo mật, quản lý rủi ro, đến phục hồi sự cố, nhằm bảo vệ hệ thống của bạn khỏi các cuộc tấn công phức tạp và những rủi ro bảo mật khác. Đội ngũ chuyên gia luôn sẵn sàng đồng hành cùng doanh nghiệp để đảm bảo sự an toàn tối đa cho dữ liệu và hệ thống.
-          </p>
+    <!-- ======= Service Details Section ======= -->
+    <section id="service-details" class="service-details">
+        <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+            <div class="row gy-4">
+
+                <div class="col-lg-4">
+                    <div class="services-list">
+                        <a href="#" class="active">Đánh giá hệ thống</a>
+                        <a href="#">Kiểm thử bảo mật</a>
+                        <a href="#">Quản lý rủi ro</a>
+                        <a href="#">Phục hồi sự cố</a>
+                        <a href="#">Thiết kế giải pháp bảo mật</a>
+                    </div>
+
+                    <h4>Giải pháp bảo mật hệ thống toàn diện</h4>
+                    <p>Chúng tôi cung cấp dịch vụ bảo mật chuyên sâu nhằm bảo vệ hệ thống của bạn khỏi các mối đe dọa
+                        tiềm ẩn, đảm bảo an toàn dữ liệu và duy trì sự hoạt động liên tục của hệ thống doanh nghiệp.</p>
+                </div>
+
+                <div class="col-lg-8">
+                    <img src="assets/img/service/service-3-1024x648.jpg" alt="" class="img-fluid services-img">
+                    <h3>Dịch vụ bảo mật hệ thống tiên tiến, đảm bảo an toàn cho mọi môi trường CNTT</h3>
+                    <p>
+                        Chúng tôi hỗ trợ kiểm tra, đánh giá và nâng cấp hệ thống bảo mật cho doanh nghiệp nhằm ngăn chặn
+                        các lỗ hổng bảo mật, giảm thiểu rủi ro và bảo vệ dữ liệu khỏi các cuộc tấn công mạng. Đội ngũ
+                        chuyên gia của chúng tôi sẽ xây dựng chiến lược bảo mật phù hợp, đảm bảo an ninh hệ thống.
+                    </p>
+                    <ul>
+                        <li><i class="bi bi-check-circle"></i>
+                            <span>Đánh giá và kiểm thử lỗ hổng bảo mật toàn diện.</span></li>
+                        <li><i class="bi bi-check-circle"></i> <span>Thiết kế và triển khai các giải pháp bảo mật hiện đại.</span>
+                        </li>
+                        <li><i class="bi bi-check-circle"></i>
+                            <span>Tư vấn và quản lý rủi ro bảo mật cho hệ thống CNTT.</span></li>
+                    </ul>
+                    <p>
+                        Với chuyên môn sâu rộng, chúng tôi giúp doanh nghiệp xây dựng và duy trì một hệ thống bảo mật
+                        mạnh mẽ, phát hiện và ngăn chặn kịp thời các mối đe dọa. Hỗ trợ phục hồi sau sự cố và đảm bảo hệ
+                        thống luôn hoạt động an toàn, tin cậy.
+                    </p>
+                    <p>
+                        Chúng tôi cung cấp các giải pháp bảo mật toàn diện, từ kiểm thử bảo mật, quản lý rủi ro, đến
+                        phục hồi sự cố, nhằm bảo vệ hệ thống của bạn khỏi các cuộc tấn công phức tạp và những rủi ro bảo
+                        mật khác. Đội ngũ chuyên gia luôn sẵn sàng đồng hành cùng doanh nghiệp để đảm bảo sự an toàn tối
+                        đa cho dữ liệu và hệ thống.
+                    </p>
+                </div>
+
+            </div>
+
         </div>
-
-      </div>
-
-    </div>
-  </section>
-  <!-- End Service Details Section -->
+    </section>
+    <!-- End Service Details Section -->
 
 </main><!-- End #main -->
 
 <!-- ======= Footer ======= -->
 <footer id="footer" class="footer">
 
-  <div class="footer-content position-relative">
-    <div class="container">
-      <div class="row">
+    <div class="footer-content position-relative">
+        <div class="container">
+            <div class="row">
 
-        <div class="col-lg-6 col-md-8">
-          <div class="footer-info">
-            <h3>IT Solutions</h3>
-            <p>
-              Nhóm 2 <br>
-              Học viện Công nghệ Bưu Chính Viễn Thông, Viet Nam<br><br>
-              <strong>Phone:</strong> +8499999999<br>
-              <strong>Email:</strong> ptit@edu.vn<br>
-            </p>
-            <div class="social-links d-flex mt-3">
-              <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
+                <div class="col-lg-6 col-md-8">
+                    <div class="footer-info">
+                        <h3>IT Solutions</h3>
+                        <p>
+                            Nhóm 2 <br>
+                            Học viện Công nghệ Bưu Chính Viễn Thông, Viet Nam<br><br>
+                            <strong>Phone:</strong> +8499999999<br>
+                            <strong>Email:</strong> ptit@edu.vn<br>
+                        </p>
+                        <div class="social-links d-flex mt-3">
+                            <a href="#" class="d-flex align-items-center justify-content-center"><i
+                                    class="bi bi-twitter"></i></a>
+                            <a href="#" class="d-flex align-items-center justify-content-center"><i
+                                    class="bi bi-facebook"></i></a>
+                            <a href="#" class="d-flex align-items-center justify-content-center"><i
+                                    class="bi bi-instagram"></i></a>
+                            <a href="#" class="d-flex align-items-center justify-content-center"><i
+                                    class="bi bi-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div><!-- End footer info column-->
+
+                <div class="col-lg-2 col-md-4 footer-links">
+                    <ul>
+                        <li><a href="index.html">Trang chủ</a></li>
+                        <li><a href="about.html">Về chúng tôi</a></li>
+                        <li><a href="services.html">Dịch vụ</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="projects.html">Dự Án</a></li>
+                        <li><a href="contact.html">Liên lạc</a></li>
+                    </ul>
+                </div><!-- End footer links column-->
+
+                <div class="col-lg-2 col-md-4 footer-links">
+                    <ul>
+                        <li><a href="#">Lập Trình Viên</a></li>
+                        <li><a href="#">Kỹ Sư Hệ Thống</a></li>
+                        <li><a href="#">Quản Trị Cơ Sở Dữ Liệu</a></li>
+                        <li><a href="#">Chuyên Viên An Ninh Mạng</a></li>
+                        <li><a href="#">Quản Lý Dự Án IT</a></li>
+                        <li><a href="#">Thiết Kế Giao Diện</a></li>
+                    </ul>
+                </div><!-- End footer links column-->
+
+                <div class="col-lg-2 col-md-4 footer-links">
+                    <ul>
+                        <li><a href="#">Tp Hồ Chí Minh</a></li>
+                        <li><a href="#">Hà nội</a></li>
+                        <li><a href="#">Đà nẵng</a></li>
+                        <li><a href="#">Hải phòng</a></li>
+                        <li><a href="#">Quảng Ninh</a></li>
+                        <li><a href="#">Bình Dương</a></li>
+                    </ul>
+                </div><!-- End footer links column-->
+
             </div>
-          </div>
-        </div><!-- End footer info column-->
-
-        <div class="col-lg-2 col-md-4 footer-links">
-          <ul>
-            <li><a href="index.html">Trang chủ</a></li>
-            <li><a href="about.html">Về chúng tôi</a></li>
-            <li><a href="services.html">Dịch vụ</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="projects.html">Dự Án</a></li>
-            <li><a href="contact.html">Liên lạc</a></li>
-          </ul>
-        </div><!-- End footer links column-->
-
-        <div class="col-lg-2 col-md-4 footer-links">
-          <ul>
-            <li><a href="#">Lập Trình Viên</a></li>
-            <li><a href="#">Kỹ Sư Hệ Thống</a></li>
-            <li><a href="#">Quản Trị Cơ Sở Dữ Liệu</a></li>
-            <li><a href="#">Chuyên Viên An Ninh Mạng</a></li>
-            <li><a href="#">Quản Lý Dự Án IT</a></li>
-            <li><a href="#">Thiết Kế Giao Diện</a></li>
-          </ul>
-        </div><!-- End footer links column-->
-
-        <div class="col-lg-2 col-md-4 footer-links">
-          <ul>
-            <li><a href="#">Tp Hồ Chí Minh</a></li>
-            <li><a href="#">Hà nội</a></li>
-            <li><a href="#">Đà nẵng</a></li>
-            <li><a href="#">Hải phòng</a></li>
-            <li><a href="#">Quảng Ninh</a></li>
-            <li><a href="#">Bình Dương</a></li>
-          </ul>
-        </div><!-- End footer links column-->
-
-      </div>
+        </div>
     </div>
-  </div>
 </footer>
 <!-- End Footer -->
 
