--- a/service-details-6.html
+++ b/service-details-6.html
@@ -2,34 +2,34 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>IT Solutions</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+    <title>IT Solutions</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <!-- Favicons -->
+    <link href="assets/img/favicon.png" rel="icon">
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-          href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Roboto:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-          rel="stylesheet">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+            href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Roboto:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+            rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <!-- Vendor CSS Files -->
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+    <!-- Template Main CSS File -->
+    <link href="assets/css/main.css" rel="stylesheet">
 
 
 </head>
@@ -38,152 +38,168 @@
 
 <!-- ======= Header ======= -->
 <header id="header" class="header d-flex align-items-center">
-  <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
+    <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-    <a href="index.html" class="logo d-flex align-items-center">
-      <!-- Uncomment the line below if you also wish to use an image logo -->
-      <!-- <img src="assets/img/logo.png" alt=""> -->
-      <h1>IT Solutions<span>.</span></h1>
-    </a>
+        <a href="index.html" class="logo d-flex align-items-center">
+            <!-- Uncomment the line below if you also wish to use an image logo -->
+            <!-- <img src="assets/img/logo.png" alt=""> -->
+            <h1>IT Solutions<span>.</span></h1>
+        </a>
 
-    <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
-    <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
-    <nav id="navbar" class="navbar">
-      <ul>
-        <li><a href="index.html">Trang chủ</a></li>
-        <li><a href="about.html">Về Chúng tôi</a></li>
-        <li><a href="services.html">Dịch vụ</a></li>
-        <li><a href="projects.html">Dự Án</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="contact.html">Liên lạc</a></li>
-      </ul>
-    </nav><!-- .navbar -->
+        <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
+        <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
+        <nav id="navbar" class="navbar">
+            <ul>
+                <li><a href="index.html">Trang chủ</a></li>
+                <li><a href="about.html">Về Chúng tôi</a></li>
+                <li><a href="services.html">Dịch vụ</a></li>
+                <li><a href="projects.html">Dự Án</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contact.html">Liên lạc</a></li>
+            </ul>
+        </nav><!-- .navbar -->
 
-  </div>
+    </div>
 </header><!-- End Header -->
 
 <main id="main">
 
-  <!-- ======= Breadcrumbs ======= -->
-  <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/breadcrumbs-bg.jpg');">
-    <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
+    <!-- ======= Breadcrumbs ======= -->
+    <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/breadcrumbs-bg.jpg');">
+        <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-      <h2>Hỗ Trợ và Bảo Trì Hệ Thống</h2>
-      <ol>
-        <li><a href="index.html">Trang chủ</a></li>
-        <li>Dịch vụ</li>
-      </ol>
+            <h2>Hỗ Trợ và Bảo Trì Hệ Thống</h2>
+            <ol>
+                <li><a href="index.html">Trang chủ</a></li>
+                <li>Dịch vụ</li>
+            </ol>
 
-    </div>
-  </div><!-- End Breadcrumbs -->
-
-  <!-- ======= Service Details Section ======= -->
-  <section id="service-details" class="service-details">
-    <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-      <div class="row gy-4">
-
-        <div class="col-lg-4">
-          <div class="services-list">
-            <a href="#" class="active">Hỗ Trợ Kỹ Thuật</a>
-            <a href="#">Bảo Trì Hệ Thống</a>
-            <a href="#">Quản Lý Hệ Thống</a>
-            <a href="#">Giải Quyết Sự Cố</a>
-            <a href="#">Tư Vấn Công Nghệ</a>
-          </div>
-
-          <h4>Hỗ trợ và bảo trì hệ thống chuyên nghiệp</h4>
-          <p>Chúng tôi cung cấp dịch vụ hỗ trợ và bảo trì hệ thống toàn diện, giúp duy trì hiệu suất và độ tin cậy của hệ thống công nghệ thông tin. Đội ngũ kỹ thuật viên của chúng tôi sẵn sàng đáp ứng nhanh chóng các vấn đề phát sinh và thực hiện bảo trì định kỳ để hệ thống của bạn hoạt động ổn định.</p>
         </div>
+    </div><!-- End Breadcrumbs -->
 
-        <div class="col-lg-8">
-          <img src="assets/img/service/service-6-1024x648.jpg" alt="" class="img-fluid services-img">
-          <h3>Giải pháp hỗ trợ và bảo trì hệ thống tối ưu cho doanh nghiệp</h3>
-          <p>
-            Chúng tôi cung cấp các dịch vụ hỗ trợ và bảo trì hệ thống nhằm đảm bảo rằng hệ thống của bạn luôn hoạt động ổn định và hiệu quả. Dịch vụ của chúng tôi bao gồm việc xử lý sự cố nhanh chóng, bảo trì định kỳ, và cập nhật hệ thống để đáp ứng nhu cầu ngày càng cao của doanh nghiệp.
-          </p>
-          <ul>
-            <li><i class="bi bi-check-circle"></i> <span>Hỗ trợ kỹ thuật 24/7 để giải quyết mọi vấn đề phát sinh.</span></li>
-            <li><i class="bi bi-check-circle"></i> <span>Bảo trì định kỳ để duy trì hiệu suất và độ tin cậy của hệ thống.</span></li>
-            <li><i class="bi bi-check-circle"></i> <span>Giải pháp nâng cấp và cập nhật hệ thống để đáp ứng nhu cầu mới.</span></li>
-          </ul>
-          <p>
-            Dịch vụ của chúng tôi đảm bảo rằng hệ thống của bạn được bảo trì và hỗ trợ liên tục, giảm thiểu rủi ro và gián đoạn hoạt động. Chúng tôi cam kết cung cấp các giải pháp toàn diện để duy trì sự ổn định và hiệu suất cao nhất cho hệ thống công nghệ của bạn.
-          </p>
-          <p>
-            Với đội ngũ kỹ thuật viên chuyên nghiệp và kinh nghiệm, chúng tôi luôn sẵn sàng hỗ trợ và bảo trì hệ thống của bạn để đáp ứng mọi nhu cầu và thách thức. Chúng tôi tin tưởng vào khả năng của mình trong việc cung cấp dịch vụ hỗ trợ và bảo trì hệ thống hàng đầu cho doanh nghiệp của bạn.
-          </p>
+    <!-- ======= Service Details Section ======= -->
+    <section id="service-details" class="service-details">
+        <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+            <div class="row gy-4">
+
+                <div class="col-lg-4">
+                    <div class="services-list">
+                        <a href="#" class="active">Hỗ Trợ Kỹ Thuật</a>
+                        <a href="#">Bảo Trì Hệ Thống</a>
+                        <a href="#">Quản Lý Hệ Thống</a>
+                        <a href="#">Giải Quyết Sự Cố</a>
+                        <a href="#">Tư Vấn Công Nghệ</a>
+                    </div>
+
+                    <h4>Hỗ trợ và bảo trì hệ thống chuyên nghiệp</h4>
+                    <p>Chúng tôi cung cấp dịch vụ hỗ trợ và bảo trì hệ thống toàn diện, giúp duy trì hiệu suất và độ tin
+                        cậy của hệ thống công nghệ thông tin. Đội ngũ kỹ thuật viên của chúng tôi sẵn sàng đáp ứng nhanh
+                        chóng các vấn đề phát sinh và thực hiện bảo trì định kỳ để hệ thống của bạn hoạt động ổn
+                        định.</p>
+                </div>
+
+                <div class="col-lg-8">
+                    <img src="assets/img/service/service-6-1024x648.jpg" alt="" class="img-fluid services-img">
+                    <h3>Giải pháp hỗ trợ và bảo trì hệ thống tối ưu cho doanh nghiệp</h3>
+                    <p>
+                        Chúng tôi cung cấp các dịch vụ hỗ trợ và bảo trì hệ thống nhằm đảm bảo rằng hệ thống của bạn
+                        luôn hoạt động ổn định và hiệu quả. Dịch vụ của chúng tôi bao gồm việc xử lý sự cố nhanh chóng,
+                        bảo trì định kỳ, và cập nhật hệ thống để đáp ứng nhu cầu ngày càng cao của doanh nghiệp.
+                    </p>
+                    <ul>
+                        <li><i class="bi bi-check-circle"></i> <span>Hỗ trợ kỹ thuật 24/7 để giải quyết mọi vấn đề phát sinh.</span>
+                        </li>
+                        <li><i class="bi bi-check-circle"></i> <span>Bảo trì định kỳ để duy trì hiệu suất và độ tin cậy của hệ thống.</span>
+                        </li>
+                        <li><i class="bi bi-check-circle"></i> <span>Giải pháp nâng cấp và cập nhật hệ thống để đáp ứng nhu cầu mới.</span>
+                        </li>
+                    </ul>
+                    <p>
+                        Dịch vụ của chúng tôi đảm bảo rằng hệ thống của bạn được bảo trì và hỗ trợ liên tục, giảm thiểu
+                        rủi ro và gián đoạn hoạt động. Chúng tôi cam kết cung cấp các giải pháp toàn diện để duy trì sự
+                        ổn định và hiệu suất cao nhất cho hệ thống công nghệ của bạn.
+                    </p>
+                    <p>
+                        Với đội ngũ kỹ thuật viên chuyên nghiệp và kinh nghiệm, chúng tôi luôn sẵn sàng hỗ trợ và bảo
+                        trì hệ thống của bạn để đáp ứng mọi nhu cầu và thách thức. Chúng tôi tin tưởng vào khả năng của
+                        mình trong việc cung cấp dịch vụ hỗ trợ và bảo trì hệ thống hàng đầu cho doanh nghiệp của bạn.
+                    </p>
+                </div>
+
+            </div>
+
         </div>
-
-      </div>
-
-    </div>
-  </section>
-  <!-- End Service Details Section -->
+    </section>
+    <!-- End Service Details Section -->
 
 </main><!-- End #main -->
 
 <!-- ======= Footer ======= -->
 <footer id="footer" class="footer">
 
-  <div class="footer-content position-relative">
-    <div class="container">
-      <div class="row">
+    <div class="footer-content position-relative">
+        <div class="container">
+            <div class="row">
 
-        <div class="col-lg-6 col-md-8">
-          <div class="footer-info">
-            <h3>IT Solutions</h3>
-            <p>
-              Nhóm 2 <br>
-              Học viện Công nghệ Bưu Chính Viễn Thông, Viet Nam<br><br>
-              <strong>Phone:</strong> +8499999999<br>
-              <strong>Email:</strong> ptit@edu.vn<br>
-            </p>
-            <div class="social-links d-flex mt-3">
-              <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
+                <div class="col-lg-6 col-md-8">
+                    <div class="footer-info">
+                        <h3>IT Solutions</h3>
+                        <p>
+                            Nhóm 2 <br>
+                            Học viện Công nghệ Bưu Chính Viễn Thông, Viet Nam<br><br>
+                            <strong>Phone:</strong> +8499999999<br>
+                            <strong>Email:</strong> ptit@edu.vn<br>
+                        </p>
+                        <div class="social-links d-flex mt-3">
+                            <a href="#" class="d-flex align-items-center justify-content-center"><i
+                                    class="bi bi-twitter"></i></a>
+                            <a href="#" class="d-flex align-items-center justify-content-center"><i
+                                    class="bi bi-facebook"></i></a>
+                            <a href="#" class="d-flex align-items-center justify-content-center"><i
+                                    class="bi bi-instagram"></i></a>
+                            <a href="#" class="d-flex align-items-center justify-content-center"><i
+                                    class="bi bi-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div><!-- End footer info column-->
+
+                <div class="col-lg-2 col-md-4 footer-links">
+                    <ul>
+                        <li><a href="index.html">Trang chủ</a></li>
+                        <li><a href="about.html">Về chúng tôi</a></li>
+                        <li><a href="services.html">Dịch vụ</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="projects.html">Dự Án</a></li>
+                        <li><a href="contact.html">Liên lạc</a></li>
+                    </ul>
+                </div><!-- End footer links column-->
+
+                <div class="col-lg-2 col-md-4 footer-links">
+                    <ul>
+                        <li><a href="#">Lập Trình Viên</a></li>
+                        <li><a href="#">Kỹ Sư Hệ Thống</a></li>
+                        <li><a href="#">Quản Trị Cơ Sở Dữ Liệu</a></li>
+                        <li><a href="#">Chuyên Viên An Ninh Mạng</a></li>
+                        <li><a href="#">Quản Lý Dự Án IT</a></li>
+                        <li><a href="#">Thiết Kế Giao Diện</a></li>
+                    </ul>
+                </div><!-- End footer links column-->
+
+                <div class="col-lg-2 col-md-4 footer-links">
+                    <ul>
+                        <li><a href="#">Tp Hồ Chí Minh</a></li>
+                        <li><a href="#">Hà nội</a></li>
+                        <li><a href="#">Đà nẵng</a></li>
+                        <li><a href="#">Hải phòng</a></li>
+                        <li><a href="#">Quảng Ninh</a></li>
+                        <li><a href="#">Bình Dương</a></li>
+                    </ul>
+                </div><!-- End footer links column-->
+
             </div>
-          </div>
-        </div><!-- End footer info column-->
-
-        <div class="col-lg-2 col-md-4 footer-links">
-          <ul>
-            <li><a href="index.html">Trang chủ</a></li>
-            <li><a href="about.html">Về chúng tôi</a></li>
-            <li><a href="services.html">Dịch vụ</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="projects.html">Dự Án</a></li>
-            <li><a href="contact.html">Liên lạc</a></li>
-          </ul>
-        </div><!-- End footer links column-->
-
-        <div class="col-lg-2 col-md-4 footer-links">
-          <ul>
-            <li><a href="#">Lập Trình Viên</a></li>
-            <li><a href="#">Kỹ Sư Hệ Thống</a></li>
-            <li><a href="#">Quản Trị Cơ Sở Dữ Liệu</a></li>
-            <li><a href="#">Chuyên Viên An Ninh Mạng</a></li>
-            <li><a href="#">Quản Lý Dự Án IT</a></li>
-            <li><a href="#">Thiết Kế Giao Diện</a></li>
-          </ul>
-        </div><!-- End footer links column-->
-
-        <div class="col-lg-2 col-md-4 footer-links">
-          <ul>
-            <li><a href="#">Tp Hồ Chí Minh</a></li>
-            <li><a href="#">Hà nội</a></li>
-            <li><a href="#">Đà nẵng</a></li>
-            <li><a href="#">Hải phòng</a></li>
-            <li><a href="#">Quảng Ninh</a></li>
-            <li><a href="#">Bình Dương</a></li>
-          </ul>
-        </div><!-- End footer links column-->
-
-      </div>
+        </div>
     </div>
-  </div>
 </footer>
 <!-- End Footer -->
 
