--- a/blog.html
+++ b/blog.html
@@ -217,12 +217,15 @@
                             </div>
 
                             <p>
-                                Điện toán đám mây đang tạo ra những thay đổi đáng kể trong việc lưu trữ và quản lý dữ liệu. Các doanh nghiệp hiện nay có thể dễ dàng mở rộng hệ thống và tăng cường bảo mật nhờ vào công nghệ tiên tiến này.
+                                Điện toán đám mây đang tạo ra những thay đổi đáng kể trong việc lưu trữ và quản lý dữ
+                                liệu. Các doanh nghiệp hiện nay có thể dễ dàng mở rộng hệ thống và tăng cường bảo mật
+                                nhờ vào công nghệ tiên tiến này.
                             </p>
 
                             <hr>
 
-                            <a href="#" class="readmore stretched-link"><span>Xem thêm</span><i class="bi bi-arrow-right"></i></a>
+                            <a href="#" class="readmore stretched-link"><span>Xem thêm</span><i
+                                    class="bi bi-arrow-right"></i></a>
 
                         </div>
 
@@ -251,12 +254,15 @@
                             </div>
 
                             <p>
-                                Trí tuệ nhân tạo (AI) đang trở thành công nghệ cốt lõi trong việc phát triển ứng dụng hiện đại. Các công ty đang tích hợp AI vào sản phẩm để nâng cao hiệu suất và cải thiện trải nghiệm người dùng.
+                                Trí tuệ nhân tạo (AI) đang trở thành công nghệ cốt lõi trong việc phát triển ứng dụng
+                                hiện đại. Các công ty đang tích hợp AI vào sản phẩm để nâng cao hiệu suất và cải thiện
+                                trải nghiệm người dùng.
                             </p>
 
                             <hr>
 
-                            <a href="#" class="readmore stretched-link"><span>Xem thêm</span><i class="bi bi-arrow-right"></i></a>
+                            <a href="#" class="readmore stretched-link"><span>Xem thêm</span><i
+                                    class="bi bi-arrow-right"></i></a>
 
                         </div>
 
@@ -285,12 +291,15 @@
                             </div>
 
                             <p>
-                                Blockchain không chỉ là nền tảng cho các giao dịch tiền điện tử, mà còn đang được ứng dụng trong quản lý dữ liệu nhằm đảm bảo tính minh bạch và an toàn. Đây là xu hướng công nghệ nổi bật trong quản trị doanh nghiệp.
+                                Blockchain không chỉ là nền tảng cho các giao dịch tiền điện tử, mà còn đang được ứng
+                                dụng trong quản lý dữ liệu nhằm đảm bảo tính minh bạch và an toàn. Đây là xu hướng công
+                                nghệ nổi bật trong quản trị doanh nghiệp.
                             </p>
 
                             <hr>
 
-                            <a href="#" class="readmore stretched-link"><span>Xem thêm</span><i class="bi bi-arrow-right"></i></a>
+                            <a href="#" class="readmore stretched-link"><span>Xem thêm</span><i
+                                    class="bi bi-arrow-right"></i></a>
 
                         </div>
 
@@ -319,12 +328,15 @@
                             </div>
 
                             <p>
-                                Công nghệ trí tuệ nhân tạo (AI) đang mang lại những giải pháp đột phá trong việc tối ưu hóa hiệu suất hệ thống. Từ việc phân tích dữ liệu đến tự động hóa quy trình, AI giúp cải thiện hiệu quả và giảm thiểu lỗi.
+                                Công nghệ trí tuệ nhân tạo (AI) đang mang lại những giải pháp đột phá trong việc tối ưu
+                                hóa hiệu suất hệ thống. Từ việc phân tích dữ liệu đến tự động hóa quy trình, AI giúp cải
+                                thiện hiệu quả và giảm thiểu lỗi.
                             </p>
 
                             <hr>
 
-                            <a href="#" class="readmore stretched-link"><span>Xem thêm</span><i class="bi bi-arrow-right"></i></a>
+                            <a href="#" class="readmore stretched-link"><span>Xem thêm</span><i
+                                    class="bi bi-arrow-right"></i></a>
 
                         </div>
 
@@ -353,12 +365,15 @@
                             </div>
 
                             <p>
-                                Trong bối cảnh ngày càng nhiều mối đe dọa an ninh mạng, việc xây dựng giải pháp bảo mật hiệu quả là ưu tiên hàng đầu cho doanh nghiệp. Bài viết này sẽ giới thiệu các phương pháp và công cụ để bảo vệ dữ liệu và hệ thống.
+                                Trong bối cảnh ngày càng nhiều mối đe dọa an ninh mạng, việc xây dựng giải pháp bảo mật
+                                hiệu quả là ưu tiên hàng đầu cho doanh nghiệp. Bài viết này sẽ giới thiệu các phương
+                                pháp và công cụ để bảo vệ dữ liệu và hệ thống.
                             </p>
 
                             <hr>
 
-                            <a href="#" class="readmore stretched-link"><span>Xem thêm</span><i class="bi bi-arrow-right"></i></a>
+                            <a href="#" class="readmore stretched-link"><span>Xem thêm</span><i
+                                    class="bi bi-arrow-right"></i></a>
 
                         </div>
 
@@ -387,12 +402,15 @@
                             </div>
 
                             <p>
-                                Trí tuệ nhân tạo (AI) đang trở thành công cụ không thể thiếu trong việc tự động hóa quy trình doanh nghiệp. Từ việc tối ưu hóa quy trình sản xuất đến cải thiện dịch vụ khách hàng, AI giúp nâng cao hiệu quả và giảm chi phí.
+                                Trí tuệ nhân tạo (AI) đang trở thành công cụ không thể thiếu trong việc tự động hóa quy
+                                trình doanh nghiệp. Từ việc tối ưu hóa quy trình sản xuất đến cải thiện dịch vụ khách
+                                hàng, AI giúp nâng cao hiệu quả và giảm chi phí.
                             </p>
 
                             <hr>
 
-                            <a href="#" class="readmore stretched-link"><span>Xem thêm</span><i class="bi bi-arrow-right"></i></a>
+                            <a href="#" class="readmore stretched-link"><span>Xem thêm</span><i
+                                    class="bi bi-arrow-right"></i></a>
 
                         </div>
 
@@ -421,12 +439,17 @@
                             </div>
 
                             <p>
-                                Điện toán đám mây đang không ngừng phát triển và mở rộng với những xu hướng mới như serverless computing, edge computing và AI integration. Những đổi mới này không chỉ thay đổi cách doanh nghiệp triển khai công nghệ mà còn tối ưu hóa chi phí và hiệu suất hệ thống. Khám phá tương lai của điện toán đám mây và cách nó ảnh hưởng đến doanh nghiệp của bạn.
+                                Điện toán đám mây đang không ngừng phát triển và mở rộng với những xu hướng mới như
+                                serverless computing, edge computing và AI integration. Những đổi mới này không chỉ thay
+                                đổi cách doanh nghiệp triển khai công nghệ mà còn tối ưu hóa chi phí và hiệu suất hệ
+                                thống. Khám phá tương lai của điện toán đám mây và cách nó ảnh hưởng đến doanh nghiệp
+                                của bạn.
                             </p>
 
                             <hr>
 
-                            <a href="#" class="readmore stretched-link"><span>Xem thêm</span><i class="bi bi-arrow-right"></i></a>
+                            <a href="#" class="readmore stretched-link"><span>Xem thêm</span><i
+                                    class="bi bi-arrow-right"></i></a>
 
                         </div>
 
@@ -455,12 +478,16 @@
                             </div>
 
                             <p>
-                                Sự kết hợp của trí tuệ nhân tạo (AI) với quy trình sản xuất đang mở ra cơ hội mới cho việc tự động hóa và tối ưu hóa hiệu suất. AI có thể giúp phân tích dữ liệu lớn, dự đoán sự cố và điều chỉnh quy trình sản xuất một cách chính xác. Tìm hiểu cách AI có thể cải thiện năng suất và giảm chi phí sản xuất cho doanh nghiệp của bạn.
+                                Sự kết hợp của trí tuệ nhân tạo (AI) với quy trình sản xuất đang mở ra cơ hội mới cho
+                                việc tự động hóa và tối ưu hóa hiệu suất. AI có thể giúp phân tích dữ liệu lớn, dự đoán
+                                sự cố và điều chỉnh quy trình sản xuất một cách chính xác. Tìm hiểu cách AI có thể cải
+                                thiện năng suất và giảm chi phí sản xuất cho doanh nghiệp của bạn.
                             </p>
 
                             <hr>
 
-                            <a href="#" class="readmore stretched-link"><span>Xem thêm</span><i class="bi bi-arrow-right"></i></a>
+                            <a href="#" class="readmore stretched-link"><span>Xem thêm</span><i
+                                    class="bi bi-arrow-right"></i></a>
 
                         </div>
 
@@ -489,20 +516,21 @@
                             </div>
 
                             <p>
-                                Với sự gia tăng của các mối đe dọa mạng và tấn công dữ liệu, bảo mật dữ liệu đã trở thành ưu tiên hàng đầu của các doanh nghiệp. Bài viết này khám phá những xu hướng mới nhất trong bảo mật dữ liệu, bao gồm các công nghệ bảo mật tiên tiến, quản lý rủi ro và các biện pháp phòng ngừa hiệu quả để bảo vệ thông tin quan trọng của bạn.
+                                Với sự gia tăng của các mối đe dọa mạng và tấn công dữ liệu, bảo mật dữ liệu đã trở
+                                thành ưu tiên hàng đầu của các doanh nghiệp. Bài viết này khám phá những xu hướng mới
+                                nhất trong bảo mật dữ liệu, bao gồm các công nghệ bảo mật tiên tiến, quản lý rủi ro và
+                                các biện pháp phòng ngừa hiệu quả để bảo vệ thông tin quan trọng của bạn.
                             </p>
 
                             <hr>
 
-                            <a href="#" class="readmore stretched-link"><span>Xem thêm</span><i class="bi bi-arrow-right"></i></a>
+                            <a href="#" class="readmore stretched-link"><span>Xem thêm</span><i
+                                    class="bi bi-arrow-right"></i></a>
 
                         </div>
 
                     </div>
                 </div>
-
-
-
 
             </div><!-- End blog posts list -->
 
